<resources>
    <string name="app_name">My Portfolio</string>

    <string name="Title">My APP Portfolio</string>
    <string name="Header">My Nano APPs</string>
    <string name="action_settings">Settings</string>
    <string name="Spotify_Streamer">Spotify Streamer</string>
    <string name="Football_Scores">Scores APP</string>
    <string name="Library_App">Library App</string>
    <string name="Build_It_Bigger">Build It Bigger</string>
    <string name="XYZ_Reader">XYZ Reader</string>
    <string name="Capstone">Capstone</string>
</resources>
